# nonebot_plugin_wwuid

./: .gitignore
nonebot_plugin_wwuid/: README_CHAR_INFO.md  __init__.py  pyproject.toml  pytest.ini  run_tests.bat
nonebot_plugin_wwuid/nonebot-plugin-WWuid/: __init__.py  auto_delete.py  bind.py  commands.py  config.py  constants.py  debug_test.py  models.py  query.py  refresh.py  requirements.txt  statistics.py  test_katixiya.py  test_katixiya_real.py  test_katixiya_with_icons.py  utils.py  waves_api.py
nonebot_plugin_wwuid/nonebot-plugin-WWuid/api/: __init__.py  models.py  waves_api.py
nonebot_plugin_wwuid/nonebot-plugin-WWuid/commands/: __init__.py  refresh_cmd.py  role.py  role_cmd.py  stats.py  stats_cmd.py
nonebot_plugin_wwuid/nonebot-plugin-WWuid/core/: __init__.py  auto_delete.py  bind.py  query.py  refresh.py  statistics.py
nonebot_plugin_wwuid/nonebot-plugin-WWuid/plugin_core/: __init__.py  config.py  errors.py  roles.py
nonebot_plugin_wwuid/nonebot-plugin-WWuid/plugin_debug_tests/: __init__.py  diagnose.py  last_role_detail.json  test_katixiya_with_icons.py
nonebot_plugin_wwuid/nonebot-plugin-WWuid/renderer/: __init__.py  fonts.py  role_card.py  utils.py
nonebot_plugin_wwuid/nonebot-plugin-WWuid/tests/: __init__.py  conftest.py
nonebot_plugin_wwuid/nonebot-plugin-WWuid/utils/: __init__.py  calculate.py  common.py  download.py  downloader.py  (+1 more)
nonebot_plugin_wwuid/tests/: README_TEST.md  TEST_CASES.md  __init__.py  conftest.py  test_add_ck.py  test_integration.py  test_models.py  test_statistics.py  test_utils.py  test_waves_api.py
(+23 files in other folders)
